--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
       content="Explore my projects, skills, and experience as a frontend developer."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://localhost:5173" />
-    <meta
-      property="og:image"
-      content="http://localhost:5173/preview-image.jpg"
-    />
+    <meta property="og:url" content="https://portfolio-sushmithask.vercel.app" />
+<meta property="og:image" content="https://portfolio-sushmithask.vercel.app/preview-image.jpg" />
+
   </head>
   <body>
     <div id="root"></div>
