--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://portfolio-sushmithask.vercel.app" />
 <meta property="og:image" content="https://portfolio-sushmithask.vercel.app/preview-image.jpg" />
-
+<meta name="google-site-verification" content="dIdL6g64erSjt2bo87A63NZoDZW8PJpgpggxzkIn5Bo" />
   </head>
   <body>
     <div id="root"></div>
